<?xml version="1.0"?>
<package format="3">
  <name>stereo_slam</name>
  <version>0.0.1</version>
  <description>My Python ROS 2 node</description>
  <maintainer email="junlinp@deepmirror.com">junlinp</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
